syntax = "proto3";

package bootstrap.v2;

option go_package = "github.com/open-panoptes/opni/pkg/apis/bootstrap/v2";

service Bootstrap {
  rpc Join(BootstrapJoinRequest) returns (BootstrapJoinResponse);
  rpc Auth(BootstrapAuthRequest) returns (BootstrapAuthResponse);
}

message BootstrapJoinRequest {}

message BootstrapJoinResponse {
  map<string, bytes> signatures = 1;
}

message BootstrapAuthRequest {
  string          clientId     = 1;
  bytes           clientPubKey = 2;
  optional string friendlyName = 3;
}

message BootstrapAuthResponse {
  bytes serverPubKey = 1;
}
